--- a/psc-articles-dummy.html
+++ b/psc-articles-dummy.html
@@ -359,7 +359,7 @@
                   </ul>
 
                   <dl>
-                     <dt>Lower Kuttanad :</dt>
+                     <dt>Lower Kuttanad</dt>
                      <dd>
                         Lower Kuttanad includes Ambalapuzha, Nedumudy, Northern half of Karthikapally taluk.
                      </dd>
