--- a/psc-question-bank/india/india-page-1.html
+++ b/psc-question-bank/india/india-page-1.html
@@ -220,7 +220,7 @@
             <ul id="accordion-menu">
                <li class="dropdown">
                   <a href="javascript:;" class="dropdown-toggle">
-                     <span class="mtext">Home1</span>
+                     <span class="mtext">Home</span>
                   </a>
                   <ul class="submenu">
                      <li><a href="../../index.html">Home</a></li>
